--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 @use "sass:math";
 
 $mainColor : #ff4c3b;
+$darkBackghround : rgb(61, 61, 61);
 
 * {
     margin: 0;
@@ -16,8 +17,25 @@ $mainColor : #ff4c3b;
     margin: auto;
     background-color: $mainColor;
 }
+.textC-color {
+    color: white;
+}
+.darkBg {
+    background-color: $darkBackghround !important;
+}
 
 main {
+    .btn-change {
+        background-color: white;
+        position: fixed;
+        color: black;
+        top: 50%;
+        right: -5px;
+        padding: 5px;
+        border: 1px solid rgb(117, 117, 117);
+        border-radius: 3px;
+        cursor: pointer;
+    }
     .slider-height {
         height: 450px;
         overflow: hidden;
@@ -98,4 +116,93 @@ main {
           
        }
    }
+}
+
+
+// product page style
+
+.result-show  {
+    list-style: none;
+    display: flex;
+
+    li {
+        padding: 0 5px;
+        img {
+            width: 18px;
+            cursor: pointer;
+        }
+    }
+}
+.sidebar {
+    width: 100%;
+    .colappse-btn {
+        width: 100%;
+        * {
+            color: black;
+        }
+    }
+    .card {
+        background-color: #f8f9fa;
+        border: none;
+    }
+    .content {
+        div {
+            label {
+                font-size: 13px;
+            }
+            input {
+                width: 15px;
+                height: 15px;
+                border-radius: 2px;
+            }
+        }
+    }
+}
+
+.sidbarCard-img{
+    width: 100%;
+}
+// .product-img {
+//     max-height: 17rem;
+//     width: auto;
+// }
+.product-cards {
+    transition: ease-in-out 0.3s;
+    cursor: pointer;
+}
+.result-show {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    li {
+     img {
+        height: 30px;
+        width: auto;
+        padding: 0.25rem;
+        }
+    }
+}
+
+.dropdownSelect {
+    display: flex;
+    justify-content: center;
+    select{
+    height: 100%;
+    border: 0;
+    text-align: center;
+    font-size: 13px;
+    }
+    
+}
+
+
+//media
+
+@media (max-width: 994px) {
+  .sidebar {
+      left: -1500px;
+      position: absolute;
+  }
 }
