--- a/style.css
+++ b/style.css
@@ -15,6 +15,26 @@
   background-color: #ff4c3b;
 }
 
+.textC-color {
+  color: white;
+}
+
+.darkBg {
+  background-color: #3d3d3d !important;
+}
+
+main .btn-change {
+  background-color: white;
+  position: fixed;
+  color: black;
+  top: 50%;
+  right: -5px;
+  padding: 5px;
+  border: 1px solid #757575;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
 main .slider-height {
   height: 450px;
   overflow: hidden;
@@ -125,12 +145,16 @@ main .imgs-row img {
   display: flex;
 }
 
+.result-show li {
+  padding: 0 5px;
+}
+
 .result-show li img {
   width: 18px;
+  cursor: pointer;
 }
 
 .sidebar {
-  height: 1500px;
   width: 100%;
 }
 
@@ -157,9 +181,55 @@ main .imgs-row img {
   border-radius: 2px;
 }
 
+.sidbarCard-img {
+  width: 100%;
+}
+
+.product-cards {
+  -webkit-transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
+  cursor: pointer;
+}
+
+.result-show {
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .result-show li img {
   height: 30px;
   width: auto;
   padding: 0.25rem;
+}
+
+.dropdownSelect {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.dropdownSelect select {
+  height: 100%;
+  border: 0;
+  text-align: center;
+  font-size: 13px;
+}
+
+@media (max-width: 994px) {
+  .sidebar {
+    left: -1500px;
+    position: absolute;
+  }
 }
 /*# sourceMappingURL=style.css.map */
