--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 @use "sass:math";
 
 $mainColor : #ff4c3b;
+$darkBackghround : rgb(61, 61, 61);
 
 * {
     margin: 0;
@@ -16,8 +17,25 @@ $mainColor : #ff4c3b;
     margin: auto;
     background-color: $mainColor;
 }
+.textC-color {
+    color: white;
+}
+.darkBg {
+    background-color: $darkBackghround !important;
+}
 
 main {
+    .btn-change {
+        background-color: white;
+        position: fixed;
+        color: black;
+        top: 50%;
+        right: -5px;
+        padding: 5px;
+        border: 1px solid rgb(117, 117, 117);
+        border-radius: 3px;
+        cursor: pointer;
+    }
     .slider-height {
         height: 450px;
         overflow: hidden;
@@ -107,12 +125,15 @@ main {
     list-style: none;
     display: flex;
 
-    li img {
-        width: 18px;
+    li {
+        padding: 0 5px;
+        img {
+            width: 18px;
+            cursor: pointer;
+        }
     }
 }
 .sidebar {
-    height: 1500px;
     width: 100%;
     .colappse-btn {
         width: 100%;
@@ -137,12 +158,51 @@ main {
         }
     }
 }
+
+.sidbarCard-img{
+    width: 100%;
+}
 // .product-img {
 //     max-height: 17rem;
 //     width: auto;
 // }
-.result-show li img{
-    height: 30px;
-    width: auto;
-    padding: 0.25rem;
+.product-cards {
+    transition: ease-in-out 0.3s;
+    cursor: pointer;
+}
+.result-show {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    li {
+     img {
+        height: 30px;
+        width: auto;
+        padding: 0.25rem;
+        }
+    }
+}
+
+.dropdownSelect {
+    display: flex;
+    justify-content: center;
+    select{
+    height: 100%;
+    border: 0;
+    text-align: center;
+    font-size: 13px;
+    }
+    
+}
+
+
+//media
+
+@media (max-width: 994px) {
+  .sidebar {
+      left: -1500px;
+      position: absolute;
+  }
 }
