--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body {
+  background-color: rgb(48, 48, 48);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-body {
+  width: 500px;
+  height: 300px;
+  background-color: rgb(233, 233, 233);
+  position: absolute;
+  top: 30%;
+  left: 30%;
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.title {
+  font-size: 20px;
+  background-color: rgb(236, 236, 236);
+  color: rgb(44, 44, 44);
+  max-height: 40px;
+  width: 100%;
+  padding: 10px;
+  border-bottom: 1px solid rgb(148, 148, 148);
+}
+.form {
+  width: 90%;
+  max-height: 50px;
+  margin-top: 20px;
+}
+.input {
+  width: 80%;
+  height: 30px;
+  color: rgb(143, 143, 143);
+  font-size: 16px;
+  padding: 6px;
+}
+.add-btn {
+  height: 100%;
+  background-color: #007bff;
   color: white;
+  border: 0;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  padding: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+.todos {
+  height: auto;
+  width: 90%;
+  border: 1px solid rgb(148, 148, 148);
+  margin-top: 10px;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todos li {
+  min-height: 30px;
+  height: auto;
+  background-color: rgb(248, 246, 246);
+  color: black;
+  border: 1px solid rgb(192, 192, 192);
+  margin-bottom: 5px;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
